# luma-lite

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
plugins/builtin/injection-test/: extension.lua  inject.js  manifest.json
plugins/builtin/opensteamtool/: manifest.json
plugins/builtin/steam-store-helper/: extension.lua  inject.js  manifest.json
src/: App.css  App.tsx  main.tsx  tokens.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: extension.rs  extension_lifecycle.rs  hubcap.rs  mod.rs  plugin_loader .rs  plugins.rs  providers.rs  repository.rs  steam_bridge.rs  steam_inject.rs  steam_runtime.rs  tray.rs
src-tauri/src/lua_engine/: mod.rs
src/components/: AppearanceView.tsx  ConfirmModal.tsx  DashboardView.tsx  ExtensionsView.tsx  SettingsView.tsx  Sidebar.tsx
src/test/: ExtensionsView.test.tsx  SettingsView.test.tsx  Sidebar.test.tsx  inject-payload.test.ts  toggle-fix.test.ts
