[package]
name = "luma-lite"
version = "0.1.0"
description = "LumaForge Lite — standalone Steam CEF extension tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "luma_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
tungstenite = "0.24"
dashmap = "6"
dirs = "5"
zip = "2"
open = "5"
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
